WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28797
JSON Stringifier does not follow ES5 spec for handling of Number, String and Boolean objects
https://bugs.webkit.org/show_bug.cgi?id=28797
Summary
JSON Stringifier does not follow ES5 spec for handling of Number, String and ...
Oliver Hunt
Reported
2009-08-27 22:47:16 PDT
The JSON Stringifier currently just pulls the wrapped primitive from Number, String, and Boolean objects, rather than calling toNumber, toString, and toPrimitive as specified.
Attachments
Patch v1
(10.16 KB, patch)
2009-08-27 22:57 PDT
,
Oliver Hunt
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2009-08-27 22:57:18 PDT
Created
attachment 38716
[details]
Patch v1
Maciej Stachowiak
Comment 2
2009-08-27 22:58:39 PDT
Comment on
attachment 38716
[details]
Patch v1 r=me
Oliver Hunt
Comment 3
2009-08-27 23:17:57 PDT
Committed
r47857
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug