JSON Stringifier does not follow ES5 spec for handling of Number, String and Boolean objects https://bugs.webkit.org/show_bug.cgi?id=28797

Reviewed by Maciej Stachowiak

Fixed unwrapBoxedPrimitive to do the right thing, which necessitated a couple of new exception
checks, and corrected the logic in gap to correctly convert Number and String objects.

Canonical link: https://commits.webkit.org/39433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47857 268f45cc-cd09-0410-ab3c-d52691b4dbfc